--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^8.1",
         "blade-ui-kit/blade-zondicons": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
+        "kitloong/laravel-migrations-generator": "^6.10",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mallardduck/blade-boxicons": "^2.4"
+        "mallardduck/blade-boxicons": "^2.4",
+        "reliese/laravel": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
